--- a/quiz_devpro/quiz/templates/quiz/indice.html
+++ b/quiz_devpro/quiz/templates/quiz/indice.html
@@ -13,10 +13,16 @@
             <p class="subtitle-quiz">Quiz</p>
             <p class="subtitle-page">Dev Pro</p>
             <div class="form">
-                <form class="login-form" action="game.html">
-                  <input type="text" placeholder="NOME"/>
-                  <input type="password" placeholder="EMAIL"/>
-                  <button>Entrar</button>
+                {% if form.errors %}
+                <p>Erros:
+                    {{ form.errors }}
+                </p>
+                {% endif %}
+                <form class="login-form" method="post" action="/">
+                    {% csrf_token %}
+                  <input type="text" name="nome" placeholder="NOME" value="{{ form.nome.value }}"/>
+                  <input type="email" name="email" placeholder="EMAIL" value="{{ form.email.value }}"/>
+                  <button type="submit">Entrar</button>
                 </form>
             </div>
         </div>
